tests/golden/type_errors/named_struct_nominal_mismatch.cd
struct Person { name: string }
struct Pet { name: string }
let pet: Pet = Pet { name: "Milo" };
let person: Person = pet;
